Add GridSizeSweepBenchmark (compile-clean; awaits OpenCL host to run)
Implements the grid-size sweep idea from the cjherm/BAF23 fork's
ChunkSizeIteratorBenchmark, rewritten for the ACTUAL current
mainline API surface. The earlier TODO draft prescribed field
names that do not exist in this codebase (gridNumBits, chunkMode,
kernelMode) and method signatures that have since changed; this
implementation corrects all of that:

- Sweep parameters are the two that actually exist:
  CProducer.batchSizeInBits (work size = 1 << bits) and
  CProducerOpenCL.loopCount (inner iterations per work-item).
- Kernel entry is OpenCLContext.createKeys(BigInteger), single
  base in, one OpenCLGridResult out.
- OpenCL availability gate uses the existing
  OpenCLPlatformAssume convention; absent device yields
  AssumptionViolatedException -> JMH ERROR per data point
  (visible asymptote, no silent downgrade).
- @Fork includes the project-canonical
  --add-opens=java.base/sun.nio.ch=ALL-UNNAMED and
  --add-exports=java.base/jdk.internal.ref=ALL-UNNAMED so JMH's
  forked JVMs match Surefire's argLine.
- @Param defaults: batchSizeInBits in {16, 18, 20} x loopCount
  in {1, 2}. All cross-products satisfy
  "batchSizeInBits % loopCount == 0" per CProducerOpenCL javadoc.
- Throughput unit documented as kernel launches/sec at each
  corner; candidates/sec = launches/sec * (1 << batchSizeInBits).
  @OperationsPerInvocation cannot normalize because it requires
  a compile-time constant.

Cannot run on this sandbox (no OpenCL device); mvn test-compile
on this branch succeeds, which is the bar for adding the file.
First run on a host with OpenCL will reveal whether the default
@Param ranges fit the device VRAM and need narrowing or widening.

CLAUDE.md TODO entry updated: marks the grid-size sweep DONE,
collapses the stale prescriptive code block + open-design-questions
section into a short paragraph, keeps the context-reuse companion
benchmark as the remaining open item.